--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,7 @@
   min-width: 320px;
   margin: 0 auto;
   box-sizing: border-box;
+  position: relative;
   background-color: #000000;
   padding-left: 199px;
   padding-right: 199px;
