--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,26 +1,20 @@
 @import url(./__container/popup__container.css);
+@import url(./__header/popup__header.css);
+@import url(./__close-icon/popup__close-icon.css);
+@import url(./__name/popup__name.css);
+@import url(./__caption/popup__caption.css);
+@import url(./__button/popup__button.css);
 
 
 .popup {
-   position: absolute;
-   height: 100vh;
+  position: absolute;
+  opacity: .5;
   top: 0;
   right: 0;
   bottom: 0;
-  left: 0; 
+  left: 0;
   background-color: #000000;
-  opacity: .5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  
+  
 }
 
-.popup::after {
-  background-color: #000000;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; 
-  border: orange 3px solid;
-}
