--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -1,11 +1,17 @@
 .popup__close-icon {
   width: 40.7px;
   height: 40.7px;
-  /* transform: rotate(45deg); */
   background-image: url(../../../images/close-icon.svg);
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
   top: -40.7px;
   right: -40.7px;
+}
+
+@media screen and (max-width: 1024px){
+  .popup__close-icon {
+    right: 0;
+    top: -53.62px
+  }
 }
