--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,19 +3,28 @@
   flex-direction: column;
   justify-content: space-between;
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
+  
   right: 0;
+  left: 0;
+  
+  
   max-width: 430px;
   max-height: 330px;
   background-color: #ffffff;
-  margin: 0 auto;
-  margin-top: 30vh;
+  
+ 
+  
   z-index: 1;
   color: #000000;
   padding: 36px;
   border-radius: 10px;
+}
+
+
+@media screen and (max-width: 1024px){
+  .popup__container {
+    
+    }
 }
 
 
