--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,17 +4,10 @@
 @import url(./__name/popup__name.css);
 @import url(./__caption/popup__caption.css);
 @import url(./__button/popup__button.css);
-
+@import url(./__overlay/popup__overlay.css);
 
 .popup {
-  position: absolute;
-  opacity: .5;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #000000;
-  
-  
+ display: none;
+ position: relative;
 }
 
