--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -12,6 +12,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 47px;
+  margin-left: 199px;
+  margin-right: 199px;
 }
 
 @media screen and (max-width: 1055px) {
