--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,6 +2,7 @@
 .page {
   max-width: 1280px;
   min-width: 320px;
+  position: relative;
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
