--- a/blocks/popup/__close-icon/popup__close-icon.css
+++ b/blocks/popup/__close-icon/popup__close-icon.css
@@ -9,6 +9,11 @@
   right: -40.7px;
 }
 
+.popup__close-icon:hover {
+  opacity: .6;
+  transition: opacity 0.3s;
+}
+
 @media screen and (max-width: 1024px){
   .popup__close-icon {
     right: 0;
