--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,9 +4,11 @@
   justify-content: space-between;
   position: absolute;
   
+  margin: 0 auto;
+  top: 195px;
   right: 0;
-  left: 0;
   
+  left: 0;
   
   max-width: 430px;
   max-height: 330px;
