--- a/blocks/popup/__overlay/popup__overlay.css
+++ b/blocks/popup/__overlay/popup__overlay.css
@@ -1,7 +1,10 @@
-.popup__overlay {
+/* .popup__overlay {
   position: absolute;
   opacity: .5;
-  width: 100%;
-  height: 100vh;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  
   background-color: #000000;
-}
+} */
