--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,6 +8,17 @@
 
 .popup {
  display: none;
- position: relative;
+}
+
+.popup::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  
+  background-color: #000000;
+  opacity: 0.5;
 }
 
