--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -10,6 +10,11 @@
   background-color: #000000;
 }
 
+.profile__add-button:hover {
+  opacity: .6;
+  transition: opacity 0.3s;
+}
+
 @media screen and (max-width: 1055px) {
   .profile__add-button{
     margin-top: 36px;
