add adaptive and input

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,8 +2,22 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
   gap: 21px 18px;
-  margin: 0 auto;
   padding: 0;
   margin-left: 199px;
   margin-right: 199px;
+}
+
+@media screen and (max-width: 1055px) {
+  .elements {
+    margin-left: 50px;
+  margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .elements {
+    margin-left: 19px;
+  margin-right: 19px;
+  }
+  
 }
