--- a/blocks/footer/text/footer__text.css
+++ b/blocks/footer/text/footer__text.css
@@ -2,6 +2,13 @@
   font-weight: 400;
   font-style: normal;
   font-size: 18px;
-  line-height: 21,78px;
+  line-height: 22px;
   color: #545454;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__text {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
