--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,14 @@
 .header__logo {
+  width: 142px;
+  height: 33px;
   margin-bottom: 40.6px;
+}
+
+@media screen and (max-width: 768px) {
+  .header__logo{
+    width: 103px;
+  height: 24px;
+  margin-bottom: 31.6px;
+  margin-left: 27px;
+  }
 }
