--- a/blocks/popup/__caption/popup__caption.css
+++ b/blocks/popup/__caption/popup__caption.css
@@ -3,6 +3,7 @@
   font-style: normal;
   font-size: 14px;
   line-height: 16.94px;
+  border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  padding-bottom: 13.34px;
+  padding-bottom: 13.26px;
 }
