--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -22,11 +22,18 @@
   border-radius: 10px;
 }
 
-
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 768px) {
   .popup__container {
-    
-    }
+    top: 123px;
+  }
+}
+
+
+@media screen and (max-width: 540px) {
+  .popup__container {
+    margin-left: 19px;
+  margin-right: 19px;
+  }
 }
 
 
