--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -3,6 +3,9 @@
   font-style: normal;
   font-size: 14px;
   line-height: 16.94px;
+  border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  padding-bottom: 13.34px;
+  margin-bottom: 30px;
+  padding-bottom: 13.26px;
+  
 }
