--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -18,7 +18,12 @@
 @media screen and (max-width: 1055px) {
   .profile__add-button{
     margin-top: 36px;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .profile__add-button{
     width: 100%;
   }
-  
 }
