--- a/blocks/popup/__overlay/popup__overlay.css
+++ b/blocks/popup/__overlay/popup__overlay.css
@@ -1,10 +1,12 @@
-/* .popup__overlay {
-  position: absolute;
-  opacity: .5;
+.popup__overlay {
+  position: fixed;
   top: 0;
   right: 0;
-  left: 0;
   bottom: 0;
-  
-  background-color: #000000;
-} */
+  left: 0;
+  background-color: rgba(0, 0, 0, .5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
