--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,6 +1,8 @@
 .elements {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+  
+
   gap: 21px 18px;
   padding: 0;
   margin-left: 199px;
