--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -2,6 +2,9 @@
   width: 100%;
   height: 50.15px;
   background-color: #000000;
+  border: none;
+  
+  
   border-radius: 2px;
   color: #ffffff;
   margin: 0;
