--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,12 +4,14 @@
   font-size: 42px;
   line-height: 56px;
   margin: 0;
-  margin-bottom: 16px;
+  max-width: 320px;
+  margin-right: 24px;
 }
 
 @media screen and (max-width: 768px) {
   .profile__name{
-    margin-bottom: 14px;
+    
     font-size: 27px;
+    margin-right: 6px;
   }
 }
