--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,6 +5,7 @@
 @import url(./__caption/profile__caption.css);
 @import url(./__edit-button/profile__edit-button.css);
 @import url(./__add-button/profile__add-button.css);
+@import url(./__wrapper/profile__wrapper.css);
 
 
 .profile {
