--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,8 +5,13 @@
   margin: 0 auto;
   box-sizing: border-box;
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
   background-color: #000000;
   color: #ffffff;
   font-family: Inter, 'Arial', sans-serif;
 }
+
+/* * {
+  border: 1px red solid;
+} */
