--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,9 +5,11 @@
   box-sizing: border-box;
   border-radius: 2px;
   background-image: url(../../../images/plus.svg);
+  background-size: 22px 22px;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #000000;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
@@ -17,7 +19,7 @@
 
 @media screen and (max-width: 1055px) {
   .profile__add-button {
-    margin-top: 36px;
+    margin-top: 29px;
     width: 50%;
   }
 }
@@ -25,5 +27,6 @@
 @media screen and (max-width: 768px) {
   .profile__add-button {
     width: 100%;
+    background-size: 16px 16px;
   }
 }
