--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,10 +1,12 @@
 .element__like-button {
   background-image: url(../../../images/like.svg);
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   width: 20.76px;
   height: 18.13px;
-  background-color: #ffffff;
+  background-color: transparent;
   border: none;
   margin-right: 21px;
+  cursor: pointer;
 }
