--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,22 +1,1 @@
-.elements {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
-  gap: 21px 18px;
-  padding: 0;
-  margin-left: 199px;
-  margin-right: 199px;
-}
-
-@media screen and (max-width: 1055px) {
-  .elements {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .elements {
-    margin-left: 19px;
-    margin-right: 19px;
-  }
-}
+@import url(../elements/__list/elements__list.css);
