--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,4 +1,10 @@
 .popup__button {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
   width: 100%;
   height: 50.15px;
   background-color: #000000;
@@ -7,9 +13,17 @@
   color: #ffffff;
   margin: 0;
   margin-top: 48px;
+  cursor: pointer;
 }
 
 .popup__button:hover {
   opacity: .8;
   transition: opacity 0.3s;
+}
+
+@media screen and (max-width: 768px) {
+  .popup__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
