--- a/blocks/popup/__input-text/popup__input-text.css
+++ b/blocks/popup/__input-text/popup__input-text.css
@@ -1,4 +1,4 @@
-.popup__name {
+.popup__input-text {
   font-family: Inter, 'Arial', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -6,6 +6,9 @@
   line-height: 16.94px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-bottom: 30px;
   padding-bottom: 13.26px;
+}
+
+.popup__input-text:first-of-type {
+  margin-bottom: 30px;
 }
