--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,10 +2,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 350px;
 }
 
 @media screen and (max-width: 1055px) {
   .profile__info {
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .profile__info {
+    text-align: center;
+    max-width: 280px;
   }
 }
