--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,15 +4,20 @@
   font-style: normal;
   font-size: 42px;
   line-height: 56px;
+  vertical-align: text-bottom;
   margin: 0;
-  max-width: 320px;
-  margin-right: 24px;
+  max-width: 350px;
+  margin-right: 20px;
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
+  overflow: hidden; 
+  
 }
 
 @media screen and (max-width: 768px) {
-  .profile__name{
-    
+  .profile__name {
     font-size: 27px;
     margin-right: 6px;
+   
   }
 }
