--- a/blocks/profile/__wrapper/profile__wrapper.css
+++ b/blocks/profile/__wrapper/profile__wrapper.css
@@ -2,3 +2,10 @@
   display: flex;
   align-items: center;
 }
+
+
+@media screen and (max-width: 768px){
+  .profile__wrapper {
+    margin-top: 17px;
+  }
+}
