--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   background-color: transparent;
   background-size: auto;
+  padding: 0;
   cursor: pointer;
 }
 
@@ -20,7 +21,6 @@
 
 @media screen and (max-width: 768px) {
   .profile__edit-button {
-    margin-left: 1px;
     width: 16px;
     height: 16px;
     background-size: 7.5px 7.5px;
