feat: add and remove cards JS

--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,4 +1,8 @@
 .element__image {
-  width: 100%;
+  display: flex;
+  width: 282px;
+  height: 282px;
   border-radius: 10px 10px 0 0;
+  object-fit: cover;
+  overflow: hidden;
 }
