--- a/blocks/element/__caption/element__caption.css
+++ b/blocks/element/__caption/element__caption.css
@@ -1,9 +1,9 @@
 .element__caption {
   display: flex;
+  height: 79px;
   justify-content: space-between;
   align-items: center;
   background-color: #ffffff;
   border-radius: 0 0 10px 10px;
-  padding: 27px 0px 25px 1px;
 }
 
