--- a/blocks/element/__delete-button/element__delete-button.css
+++ b/blocks/element/__delete-button/element__delete-button.css
@@ -1,23 +1,23 @@
-.element__like-button {
-  background-image: url(../../../images/like.svg);
+.element__delete-button {
+  background-image: url(../../../images/trash.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  width: 20.76px;
-  height: 20.76px;
+  width: 18px;
+  height: 19.3px;
   background-color: transparent;
   border: none;
   cursor: pointer;
-  margin-right: 22px;
-  
-  padding: 0;
+  position: absolute;
+  top: 18px;
+  right: 15px;
 }
 
-.element__like-button:hover {
+.element__delete-button:hover {
   opacity: .6;
   transition: opacity 0.3s;
 }
 
-.element__like-button:focus {
+.element__delete-button:focus {
   outline: none;
 }
