--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,9 +1,19 @@
+@import url(./__image-container/element__image-container.css);
 @import url(./__image/element__image.css);
 @import url(./__caption/element__caption.css);
 @import url(./__heading/element__heading.css);
 @import url(./__like-button/element__like-button.css);
+@import url(./__like-button/_active/element__like-button_active.css);
+@import url(./__delete-button/element__delete-button.css);
+/* * {
+  border: 1px solid red;
+  
+} */
 .element {
+  
   list-style: none;
   display: flex;
   flex-direction: column;
+  height: 361px;
+  
 }
