--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 430px;
+  min-width: 430px;
   background-color: #ffffff;
   color: #000000;
   padding: 34px 36px 36px;
@@ -12,6 +12,7 @@
 
 @media screen and (max-width: 768px) {
   .popup__container {
+    min-width: 240px;
     padding: 25px 25px;
     margin-left: 19px;
     margin-right: 19px;
