--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -1,6 +1,6 @@
 .elements__list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 282px);
+  grid-template-columns: repeat(auto-fit, 282px);
   gap: 21px 18px;
   margin: 0;
   padding: 0;
