--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -19,6 +19,10 @@
   transition: opacity 0.3s;
 }
 
+.profile__edit-button:focus {
+  outline: none;
+}
+
 @media screen and (max-width: 768px) {
   .profile__edit-button {
     width: 16px;
