--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,15 +1,25 @@
 @import url(./__container/popup__container.css);
 @import url(./__header/popup__header.css);
+@import url(./__header/_narrow/popup__header_narrow.css);
 @import url(./__close-icon/popup__close-icon.css);
 @import url(./__input-text/popup__input-text.css);
+@import url(./__input-text/_small/popup__input-text_small.css);
 @import url(./__button/popup__button.css);
+@import url(./__button/_narrow/popup__button_narrow.css);
 @import url(./__figure/popup__figure.css);
 @import url(./__image/popup__image.css);
 @import url(./__caption/popup__caption.css);
+@import url(./__close-icon/_position/popup__close-icon_position_corner.css);
+
+
+
 .popup {
-  display: none;
+  display: flex;
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 3s linear;
+  transition-property: opacity, visibility;
+  transition-duration: .3s, 0s;
+  transition-delay: 0s, .3s;
   position: fixed;
   top: 0;
   right: 0;
