--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,8 +1,7 @@
 .element__image {
   display: flex;
-  width: 282px;
-  height: 282px;
+  width: 100%;
+  height: 100%;
   border-radius: 10px 10px 0 0;
   object-fit: cover;
-  overflow: hidden;
 }
