--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,8 @@
 .header__logo {
   width: 142.01px;
   height: 33.4px;
-  margin-bottom: 40.6px;
+  margin-bottom: 37px;
+  margin-left: 2px;
 }
 
 @media screen and (max-width: 768px) {
