--- a/blocks/popup/__input-text/popup__input-text.css
+++ b/blocks/popup/__input-text/popup__input-text.css
@@ -6,9 +6,13 @@
   line-height: 16.94px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  padding-bottom: 13.26px;
+  padding-bottom: 9px;
 }
 
 .popup__input-text:first-of-type {
   margin-bottom: 30px;
+}
+
+.popup__input-text:focus {
+  outline: none;
 }
