--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,5 +1,5 @@
 .popup_opened {
-  display: flex;
+  visibility: visible;
   opacity: 1;
-  transition: opacity 3s linear;
+  transition-delay: 0s, 0s;
 }
