--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -13,6 +13,7 @@
   margin-bottom: 50px;
   margin-left: 199px;
   margin-right: 199px;
+  margin-top: 4px;
 }
 
 @media screen and (max-width: 1055px) {
