--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,6 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__container/_type/popup__container_type_profile.css);
+@import url(../blocks/popup/__container/_type/popup__container_type_addCard.css);
+@import url(../blocks/popup/_type/popup_type_image.css);
