--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -7,17 +7,14 @@
   color: #FF0000;
   margin-top: 5px;
   max-width: 327px;
-  max-height: 38px;
-  
+  height: 38px;
 }
 
-.popup__error:first-of-type {
-  
-}
 
-@media screen and (max-width: 768px){
+
+@media screen and (max-width: 768px) {
   .popup__error {
     max-width: 227px;
-    max-height: 50px;
+    font-size: 10px;
   }
 }
