--- a/src/blocks/popup/__button/_invalid/popup__button_invalid.css
+++ b/src/blocks/popup/__button/_invalid/popup__button_invalid.css
@@ -1,5 +1,5 @@
 .popup__button_invalid {
-  opacity: 20%;
+  opacity: .2;
   background: transparent;
   border: 1px solid #000000;
   color: #000000;
@@ -7,4 +7,5 @@
 
 .popup__button_invalid:hover {
   opacity: .2;
+  cursor: default;
 }
