--- a/src/blocks/profile/__wrapper/profile__wrapper.css
+++ b/src/blocks/profile/__wrapper/profile__wrapper.css
@@ -3,8 +3,13 @@
   align-items: center;
 }
 
+@media screen and (max-width: 1055px) {
+  .profile__wrapper {
+    justify-content: center;
+  }
+}
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
   .profile__wrapper {
     margin-top: 17px;
   }
