--- a/src/blocks/element/__like-button/element__like-button.css
+++ b/src/blocks/element/__like-button/element__like-button.css
@@ -8,7 +8,7 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  margin-right: 22px;
+  /* margin-right: 22px; */
   padding: 0;
 }
 
