--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -4,7 +4,10 @@
 @import url(./__heading/element__heading.css);
 @import url(./__like-button/element__like-button.css);
 @import url(./__like-button/_active/element__like-button_active.css);
+@import url(./__like-wrapper/element__like-wrapper.css);
 @import url(./__delete-button/element__delete-button.css);
+@import url(./__like-counter/element__like-counter.css);
+@import url(./__delete-button/_hidden/element__delete-button_hidden.css);
 .element {
   list-style: none;
   display: flex;
